.metadata/.plugins/org.eclipse.cdt.ui/ASSIGNMENT_PROTEUS.build.log
10:10:08 **** Incremental Build of configuration Debug for project ASSIGNMENT_PROTEUS ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/fsm.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/fsm.d" -MT"Core/Src/fsm.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/fsm.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/fsm.c: In function 'fsm_p':
../Core/Src/fsm.c:169:5: warning: implicit declaration of function 'toogle_Speaker' [-Wimplicit-function-declaration]
  169 |     toogle_Speaker();
      |     ^~~~~~~~~~~~~~
../Core/Src/fsm.c: In function 'fsm_automatic_run3':
../Core/Src/fsm.c:186:5: warning: implicit declaration of function 'Print_Time1' [-Wimplicit-function-declaration]
  186 |     Print_Time1(timer);
      |     ^~~~~~~~~~~
In file included from ../Core/Inc/stm32f1xx_hal_conf.h:333,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/main.c:21:
../Core/Src/main.c: In function 'toogle_Speaker':
../Core/Src/main.c:131:26: error: 'htim3' undeclared (first use in this function); did you mean 'htim2'?
  131 |   __HAL_TIM_SetCompare (&htim3,TIM_CHANNEL_1,1000);
      |                          ^~~~~
../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h:1388:41: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 1388 |   (((__CHANNEL__) == TIM_CHANNEL_1) ? ((__HANDLE__)->Instance->CCR1 = (__COMPARE__)) :\
      |                                         ^~~~~~~~~~
../Core/Src/main.c:131:3: note: in expansion of macro '__HAL_TIM_SetCompare'
  131 |   __HAL_TIM_SetCompare (&htim3,TIM_CHANNEL_1,1000);
      |   ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:131:26: note: each undeclared identifier is reported only once for each function it appears in
  131 |   __HAL_TIM_SetCompare (&htim3,TIM_CHANNEL_1,1000);
      |                          ^~~~~
../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h:1388:41: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 1388 |   (((__CHANNEL__) == TIM_CHANNEL_1) ? ((__HANDLE__)->Instance->CCR1 = (__COMPARE__)) :\
      |                                         ^~~~~~~~~~
../Core/Src/main.c:131:3: note: in expansion of macro '__HAL_TIM_SetCompare'
  131 |   __HAL_TIM_SetCompare (&htim3,TIM_CHANNEL_1,1000);
      |   ^~~~~~~~~~~~~~~~~~~~
../Core/Src/fsm.c:187:5: warning: implicit declaration of function 'Print_Time2' [-Wimplicit-function-declaration]
  187 |     Print_Time2(timer2);
      |     ^~~~~~~~~~~
../Core/Src/main.c:139:36: error: 'str' undeclared (first use in this function)
  139 |  HAL_UART_Transmit(&huart2, (void*)str, sprintf(str, "speaker: %d\r", speaker), 1000);
      |                                    ^~~
../Core/Src/fsm.c:191:6: warning: implicit declaration of function 'Print_Mode' [-Wimplicit-function-declaration]
  191 |      Print_Mode(status4);
      |      ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:52: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/fsm.c:192:6: warning: implicit declaration of function 'Print_TimeOut' [-Wimplicit-function-declaration]
  192 |      Print_TimeOut(timer3);
      |      ^~~~~~~~~~~~~
../Core/Src/fsm.c:213:5: warning: implicit declaration of function 'Print_HELLO' [-Wimplicit-function-declaration]
  213 |     Print_HELLO();
      |     ^~~~~~~~~~~
../Core/Src/fsm.c:266:4: warning: implicit declaration of function 'Print_ERROR' [-Wimplicit-function-declaration]
  266 |    Print_ERROR();
      |    ^~~~~~~~~~~
../Core/Src/fsm.c:283:5: warning: implicit declaration of function 'Print_Time' [-Wimplicit-function-declaration]
  283 |     Print_Time(timer2);
      |     ^~~~~~~~~~
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:10:09 Build Failed. 4 errors, 8 warnings. (took 1s.97ms)

